new api to get full name of director via uuid
